# autorize

./: .gitignore  CHANGELOG.md  COMPLETED.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
examples/pi-digits/: README.md  bad-agent.sh  mock-agent.sh  score.sh
examples/pi-digits/.autorize/pi/: config.toml  program.md
skills/autorize/: SKILL.md
src/: agent.rs  cli.rs  config.rs  error.rs  experiment.rs  iteration.rs  llms.md  lock.rs  main.rs  prompt.rs  schedule.rs  scoring.rs  storage.rs  subproc.rs  templates.rs  worktree.rs
src/cli/: backfill.rs  clean.rs  init.rs  list.rs  llms.rs  resume.rs  run.rs  status.rs  tell.rs
src/templates/: config.toml.tmpl  program.md.tmpl
tests/: e2e_pi.rs  signal_cleanup.rs
