[package]
name = "autorize"
version = "0.2.5"
edition = "2024"
authors = ["Will Bradley <williambbradley@gmail.com>"]
description = "Iterative-improvement harness: runs an agent CLI in sandboxed git worktrees against a scoring command, keeping improvements until a deadline fires."
repository = "https://github.com/wbbradley/autorize"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
humantime = "2.3.0"
humantime-serde = "1.1.1"
nix = { version = "0.31.3", features = ["signal", "process", "fs"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
signal-hook = "0.4.4"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
